# emotional_annotation_display_web

./: .gitignore  License Agreement_CCSEMO_SIAT.docx  README.md  app.py  config.py  main.py  pyproject.toml  quick_start.sh  run_local.sh  start_server.py  start_server_local.py
config/: performance_config.py
database/tools/: ImportCSVfileIntoDB.py  standard_answers2.csv
docs/: PERFORMANCE_OPTIMIZATION.md  gzx_data.csv
models/: admin_model.py
routes/: api_routes.py  consistency_routes.py  group_routes.py  lansys_proxy.py  main_routes.py  manager_proxy.py  standard_answers_routes.py  test_routes.py
scripts/: README.md  add_scale_order_field.py  add_va_scale_field.py  apply_performance_optimizations.py  check_and_create_table.py  create_9point_table.py  import_data.py  import_second_consistency_answers.py  init_and_import.py  performance_monitor.py  security_check.py  unified_db_manager.py  update_annotated_count.py
services/: admin_service.py  audio_service.py  database_service.py  group_assignment_service.py  label_service.py  order_service.py  standard_answers_service.py
static/css/: admin.css  login.css  style.css  volume_test.css
static/js/: CacheManager.js  LoadingManager.js  OptimizedDataService.js  audioListManager.js  audioPlayer.js  consistency_test.js  dataService.js  emotionAnnotator.js  emotionAnnotator_9point.js  (+9 more)
templates/: admin_dashboard.html  consistency_test.html  index.html  index_9point.html  test.html  volume_test.html  volume_test_confirmation.html
utils/: audio_utils.py  emotion_data_toolkit.py  group_data_viewer.py  logger.py
(+12 files in other folders)
