[project]
name = "emotional-annotation-display-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "blinker>=1.9.0",
    "click>=8.2.1",
    "flask>=3.1.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "numpy==1.24.3",
    "nvitop>=1.5.1",
    "openpyxl==3.1.2",
    "pandas==2.0.3",
    "pipreqs>=0.5.0",
    "pydub>=0.25.1",
    "pyhub>=0.0.11",
    "pymysql>=1.1.1",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.41",
    "typing-extensions>=4.14.0",
    "werkzeug>=3.1.3",
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
